# ag-os

./: .gitignore  CLAUDE.md  Dockerfile.agent  Dockerfile.app  LICENSE  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/commands/: reportoneday.md
cli/: commands.py
core/: agent_manager.py  config.py  models.py  vault.py
db/: database.py  schema.sql
deploy/: litellm.yaml
docs/: cli-reference.md  quick-start.md
docs/architecture/: ADR.md  ARCHITECTURE.md
docs/features/: AGOS-0001-инициализация-проекта.md  AGOS-0002-модели-данных.md  AGOS-0003-база-данных.md  AGOS-0004-конфигурация.md  AGOS-0005-runtime-tmux.md  AGOS-0006-agent-manager.md  AGOS-0007-telegram-роутер.md  AGOS-0008-telegram-обработчики.md  AGOS-0009-интеграция-mvp.md  (+19 more)
guard/: llm_filter.py  prompt_guard.py  regex_filter.py  rules.yaml
mcp_servers/: telegram_bridge.py
memory/: access.py  memory.py
runtime/: base.py  docker_runtime.py  tmux_runtime.py
scheduler/: scheduler.py
scripts/: setup.ps1  setup.sh
telegram/: bot.py  confirmations.py  handlers.py  router.py
tests/: test_access.py  test_agent_manager.py  test_cli.py  test_cli_schedule.py  test_config.py  test_confirmations.py  test_database.py  test_database_migration.py  test_docker_runtime.py  test_handlers.py  test_llm_filter.py  test_memory.py  test_models.py  test_prompt_guard.py  test_regex_filter.py  test_router.py  test_scheduler.py  test_telegram_bridge.py  test_tmux_runtime.py  test_vault.py
tgbot/: bot.py  handlers.py
tui/: agents_screen.py  app.py  schedule_screen.py
(+12 files in other folders)
