[project]
name = "ag-os"
version = "0.1.0"
description = "Multi-agent orchestrator with Telegram and TUI control"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "libtmux>=0.37.0",
    "textual>=0.70.0",
    "apscheduler>=3.10.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "docker>=7.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
]
